kubernetes/configs/metadiversions/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: primary
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`metadiversions.com`)
    kind: Rule
    services:
    - name: sw1-simpleweb
      port: 9001
  tls:
    secretName: metadiversions-com-tls
